--- a/paper3_ref.bib
+++ b/paper3_ref.bib
@@ -1506,3 +1506,29 @@ author = "S. Pradeep"
   Publisher                = {American Institute of Aeronautics and Astronautics},
   Timestamp                = {2015.08.25}
 }
+
+
+
+
+
+
+@article{Arie1993sliding,
+
+author = {Arie Levant},
+
+title = {Sliding order and sliding accuracy in sliding mode control},
+
+journal = {International Journal of Control},
+
+volume = {58},
+
+number = {6},
+
+pages = {1247-1263},
+
+year = {1993},
+
+}
+
+
+
